# mcp-sqlite

./: .gitignore  CHANGELOG.md  Cargo.toml  ORGANIZATION.md  README.md  RELEASE.md  build.rs  fix_badges.bat  fix_badges.sh  update_badges.ps1  update_badges.py  update_badges.sh
.cargo/: config.toml
.github/workflows/: badges.yml  docs.yml  rust.yml  update_badges.yml
docs/: 需求文档.md
examples/: client.rs  doc_example.rs
src/: lib.rs  main.rs  server.rs
