[package]
name = "mcp-sqlite"
version = "0.1.1"
edition = "2021"
description = "SQLite MCP Server - Rust implementation"
authors = ["waitfish <daiwj2024@outlook.com>"]
license = "MIT"
repository = "https://github.com/fishcode2025/mcp-sqlite"
documentation = "https://docs.rs/mcp-sqlite"
readme = "README.md"
keywords = ["sqlite", "mcp", "database", "server"]
categories = ["database"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
mcp-core_fishcode2025 = { package = "mcp-core-fishcode2025", version = "0.1.0" }
mcp-server_fishcode2025 = { package = "mcp-server-fishcode2025", version = "0.1.0" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = "0.21"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
mcp-client_fishcode2025 = { package = "mcp-client-fishcode2025", version = "0.1.0" }

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "doc_example"
path = "examples/doc_example.rs"

[lib]
name = "mcp_sqlite"
path = "src/lib.rs"
doctest = true
doc = true

[[bin]]
name = "mcp-sqlite"
path = "src/main.rs"
